Particle Birth Error #40815

Closed
opened 2014-06-26 20:06:54 +02:00 by Atomic · 12 comments

System Information
OSX 10.9.1 Intel HD4000

Blender Version
Broken: 2.71 official
Worked: I would guess around 2.67 this feature did work.

Short description of error
When particles Start and End are set to frame #1 rewind or frame change does not make them appear in the scene.

Exact steps for others to reproduce the error
The Attached BLEND file is setup to demonstrate the error.
Open the BLEND and press play. Particles will start to appear around the sphere.
But wait a second...
Examine the particle Start and End frame. They are both set to frame 1.0.
All the particles should appear on frame #1 or at least when the frame changes, not slowly appear over time as you will see when you press play in the file.

NOTE: If I type a new count in the Numberfield of the particle system and press rewind all the particles pop into existence as they should have when the frame changed on the first play.

particle_birth_error.blend

**System Information** OSX 10.9.1 Intel HD4000 **Blender Version** Broken: 2.71 official Worked: I would guess around 2.67 this feature did work. **Short description of error** When particles Start and End are set to frame #1 rewind or frame change does not make them appear in the scene. **Exact steps for others to reproduce the error** The Attached BLEND file is setup to demonstrate the error. Open the BLEND and press play. Particles will start to appear around the sphere. But wait a second... Examine the particle Start and End frame. They are both set to frame 1.0. All the particles should appear on frame #1 or at least when the frame changes, not slowly appear over time as you will see when you press play in the file. NOTE: If I type a new count in the *Number*field of the particle system and press rewind all the particles pop into existence as they should have when the frame changed on the first play. [particle_birth_error.blend](https://archive.blender.org/developer/F95654/particle_birth_error.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AtomP

Added subscriber: @AtomP

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

i dont have much experience with the particle system, but i tried it (Ubuntu 2.71 build) and the particles generally appear in the right timeframe, however sometimes it doesnt update the settings and still shows old (probably cached information). if i had a start-end timeframe of 1-100 and change it to 1-1 then it sometimes doesnt update and still show the old information.

could you try changing some values (for instance seed) just to see if it updates and behaves correctly?
also from your note it really seems like a caching issue.

i dont have much experience with the particle system, but i tried it (Ubuntu 2.71 build) and the particles generally appear in the right timeframe, however sometimes it doesnt update the settings and still shows old (probably cached information). if i had a start-end timeframe of 1-100 and change it to 1-1 then it sometimes doesnt update and still show the old information. could you try changing some values (for instance seed) just to see if it updates and behaves correctly? also from your note it really seems like a caching issue.
Lukas Tönne was assigned by Sergey Sharybin 2014-07-01 19:56:44 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

in 2.67 indeed tweaking start/end frame (to force particles to refresh) makes things working as expected. Mind having a bit of investigation? Should be rather simple to bisect.

in 2.67 indeed tweaking start/end frame (to force particles to refresh) makes things working as expected. Mind having a bit of investigation? Should be rather simple to bisect.

id love to look into this to learn, but have a final math exam on friday ;)
so i guess it will be fixed until then, otherwise ill try to fix it as my first bug fix ever (if i even manage to) after friday.

of course, please dont wait for me if you have time and want to do that ;)

id love to look into this to learn, but have a final math exam on friday ;) so i guess it will be fixed until then, otherwise ill try to fix it as my first bug fix ever (if i even manage to) after friday. of course, please dont wait for me if you have time and want to do that ;)
Member

Broken by 78c491e62a

Broken by 78c491e62a

This issue was referenced by 259a436197

This issue was referenced by 259a4361973c7e1b912b9fcded3ed02bf9ab0b96
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 259a436197.

Closed by commit 259a436197.

wow you guys are too quick :D

wow you guys are too quick :D
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40815
No description provided.